Fixed minor Alignment issues on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -691,7 +691,7 @@ body {
   display: block;
 }
 /* line 17, src\less\ourTeam.less */
-.team-img-container {
+.team-img-container > div {
   display: inline-block;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -699,7 +699,7 @@ body {
   -khtml-border-radius: 50%;
   border: solid #ff5959 2px;
 }
-/* line 26, src\less\ourTeam.less */
+/* line 27, src\less\ourTeam.less */
 .team-img {
   width: 200px;
   height: 200px;
@@ -707,44 +707,46 @@ body {
   -moz-border-radius: 50%;
   border-radius: 50%;
   -khtml-border-radius: 50%;
+  margin: 0 auto;
 }
-/* line 38, src\less\ourTeam.less */
+/* line 37, src\less\ourTeam.less */
 .team-name,
 .team-job,
 .team-text,
-.team-social {
+.team-social,
+.team-img-container {
   text-align: -webkit-center !important;
   text-align: center !important;
 }
-/* line 43, src\less\ourTeam.less */
+/* line 42, src\less\ourTeam.less */
 .team-name {
   font-size: 20px;
   font-weight: bold;
   padding-top: 5px;
 }
-/* line 50, src\less\ourTeam.less */
+/* line 49, src\less\ourTeam.less */
 .team-job {
   font-size: small;
   padding-top: 0px;
   margin-top: -5px;
   color: black;
 }
-/* line 57, src\less\ourTeam.less */
+/* line 56, src\less\ourTeam.less */
 .team-text {
   padding-top: 10px;
   font-size: 12px;
 }
-/* line 63, src\less\ourTeam.less */
+/* line 62, src\less\ourTeam.less */
 .team-social a {
   display: inline-block;
   margin-top: 7px;
   margin-right: 8px;
 }
-/* line 69, src\less\ourTeam.less */
+/* line 68, src\less\ourTeam.less */
 .team-social a:last-child {
   margin-right: 0px;
 }
-/* line 73, src\less\ourTeam.less */
+/* line 72, src\less\ourTeam.less */
 .team-social a > img {
   height: 23px;
 }
