--- a/src/less/ourTeam.less
+++ b/src/less/ourTeam.less
@@ -14,13 +14,14 @@
 
 }
 
-.team-img-container {
+.team-img-container > div {
   display: inline-block;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   -khtml-border-radius: 50%;
   border: solid @primary-color 2px;
+
 }
 
 .team-img {
@@ -30,12 +31,10 @@
   -moz-border-radius: 50%;
   border-radius: 50%;
   -khtml-border-radius: 50%;
-  //vertical-align: middle;
-  //behavior: url(css/PIE.htc);
-
+  margin: 0 auto;
 }
 
-.team-name, .team-job, .team-text, .team-social {
+.team-name, .team-job, .team-text, .team-social, .team-img-container {
   text-align: -webkit-center !important;
   text-align: center !important;
 }
